# farness

./: .gitignore  CLAUDE.md  README.md  TODO-paper-revisions.md  pyproject.toml  universe.html
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  deploy.yml  publish.yml
brier/: __init__.py  agent_setup.py  calibration.py  cli.py  framework.py  market.py  mcp_server.py  skills.py  storage.py
brier/experiments/: DECISION_USEFULNESS_STATUS.md  LLM_JUDGE_EVALUATION_PLAN.md  PREREGISTRATION.md  __init__.py  __main__.py  analyze.py  decision_usefulness.py  judge.py  (+5 more)
commands/: decide.md
docs/: agent-workflows.md
examples/: waymo_dc_market_pack.json
experiments/: prompts.json
farness/: __init__.py  agent_setup.py  cli.py  framework.py  market.py  mcp_server.py  skills.py  storage.py
forecast-api/: .env.example  .gitignore  README.md  package.json
paper/: _header.html  _quarto.yml  farness-theme.scss  generate_figures.py  index.qmd  preemptive_rigor.md  references.bib  render_paper.py  run_strongest_validation.py  run_study1_rerun.py
scripts/: generate_demo_video.py  run_decision_usefulness_pilot.py  smoke_packaged_install.py
site/: .env.example  .gitignore  index.html  next.config.ts  package-lock.json  package.json  vite.config.ts  vitest.config.ts
tests/: test_agent_setup.py  test_calibration.py  test_cli.py  test_decision_usefulness.py  test_experiments.py  test_figures.py  test_framework.py  test_llm_retry.py  test_market.py  test_mcp_server.py  test_paper_content.py  test_reframing.py  test_skills.py  test_stability.py  test_storage.py
(+1419 files in other folders)
