[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "farness"
version = "0.2.0"
description = "Forecasting as a harness for decision-making"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Max Ghenis"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["forecasting", "decision-making", "calibration", "prediction"]
dependencies = []

[project.scripts]
farness = "farness.cli:main"
farness-mcp = "farness.mcp_server:main"

[project.urls]
Homepage = "https://farness.ai"
Documentation = "https://farness.ai/docs"
Repository = "https://github.com/MaxGhenis/farness"
Issues = "https://github.com/MaxGhenis/farness/issues"

[project.optional-dependencies]
experiments = [
    "numpy>=1.24",
    "scipy>=1.10",
    "anthropic>=0.18",
    "openai>=1.0",
    "pandas>=2.0",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
]
mcp = [
    "mcp[cli]>=1.26.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["farness*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
